tests/toylang/neg/001500_mutation.toylang
program a = { var a int bool; } .
